Removed setters for core and rest modules